MyDev Project/src/objects/ticket__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>input__c</fullName>
        <label>input</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ClosedDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL(Closed_Date__c), TEXT( stage__c )=&apos;Completed&apos;)</errorConditionFormula>
        <errorDisplayField>Closed_Date__c</errorDisplayField>
        <errorMessage>Closed date should be there</errorMessage>
    </validationRules>
</CustomObject>